src/tests/e2e/snapshots/zellij__tests__e2e__cases__override_layout_from_default_to_compact.snap
---
source: src/tests/e2e/cases.rs
expression: last_snapshot
---
┌ Pane #1 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│$ /usr/src/zellij/zellij action override-layout compact                                                               │
│$                                                                                                                     │
│$ █                                                                                                                   │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Zellij (e2e-test) NORMAL  Tab #1                                                                                     
