src/tests/e2e/snapshots/zellij__tests__e2e__cases__pin_floating_panes.snap
---
source: src/tests/e2e/cases.rs
assertion_line: 2521
expression: last_snapshot
---
 Zellij (e2e-test)  Tab #1 
┌ Pane #1 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│$ cat /usr/src/zellij/fixtures/e2e/fill_for_pinned_pane                                                               │
│line1aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
│line2aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
│line3aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
│line4aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa │
│line5aaaaaaaaaaaaaaaaaaaaaaaa┌ Pane #2 ──────────────────────────────────────── PIN [+] ┐aaaaaaaaaaaaaaaaaaaaaaaaaaaa │
│line6aaaaaaaaaaaaaaaaaaaaaaaa│$                                                         │aaaaaaaaaaaaaaaaaaaaaaaaaaaa │
│line7aaaaaaaaaaaaaaaaaaaaaaaa│                                                          │aaaaaaaaaaaaaaaaaaaaaaaaaaaa │
│line8aaaaaaaaaaaaaaaaaaaaaaaa│                                                          │aaaaaaaaaaaaaaaaaaaaaaaaaaaa │
│line9aaaaaaaaaaaaaaaaaaaaaaaa│                                                          │aaaaaaaaaaaaaaaaaaaaaaaaaaaa │
│line10aaaaaaaaaaaaaaaaaaaaaaa│                                                          │aaaaaaaaaaaaaaaaaaaaaaaaaaaaa│
│line11aaaaaaaaaaaaaaaaaaaaaaa│                                                          │aaaaaaaaaaaaaaaaaaaaaaaaaaaaa│
│line12aaaaaaaaaaaaaaaaaaaaaaa│                                                          │aaaaaaaaaaaaaaaaaaaaaaaaaaaaa│
│line13aaaaaaaaaaaaaaaaaaaaaaa│                                                          │aaaaaaaaaaaaaaaaaaaaaaaaaaaaa│
│$                      hide_m│                                                          │                             │
│                             └──────────────────────────────────────────────────────────┘                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT       ... 
