src/tests/e2e/snapshots/zellij__tests__e2e__cases__quit_and_resurrect_session.snap
---
source: src/tests/e2e/cases.rs
expression: last_snapshot
---
 Zellij (e2e-test)  Tab #1  Tab #2  Tab #3  Tab #4  +        <ENTER> run, <ESC> drop to shell, <Ctrl-c> exit  
                           Pane #1                         │                           Pane #2                          
$                                                          │$                                                           
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
                             ┌ Pane #4 ────────────────────────────────────── PIN [ ] ┐                                 
                             │$                                                       │                                 
                             │ ┌ top ────────────────────────────────────────── PIN [ ] ┐                               
                             │ │                                                        │                               
                             │ │                                                        │ ┐                             
                             │ │                                                        │ │─────────────────────────────
                             │ │                  Waiting to run: top                   │ │ #3                          
                             │ │                                                        │ │                             
                             │ │    <ENTER> run, <ESC> drop to shell, <Ctrl-c> exit     │ │                             
                             └─│                                                        │ │                             
                               │                                                        │ │                             
                               └─ <ENTER> run, <ESC> drop to shell, <Ctrl-c> exit ──────┘ │                             
                                 │                                                        │                             
                                 └────────────────────────────────────────────────────────┘                             
                                                           │                                                            
                                                           │                                                            
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT  BASE 
 (FLOATING PANES VISIBLE): Press Ctrl p, <w> to hide.
