src/tests/e2e/snapshots/zellij__tests__e2e__cases__resize_terminal_window.snap
---
source: src/tests/e2e/cases.rs
expression: last_snapshot
---
 Zellij (e2e-test)  Tab #1  + 
                      Pane #1                    │                      Pane #2                                         
$                                                │$ █                                                                   
                                                 │                                                                      
                                                 │                                                                      
                                                 │                                                                      
                                                 │                                                                      
                                                 │                                                                      
                                                 │                                                                      
                                                 │                                                                      
                                                 │                                                                      
                                                 │                                                                      
                                                 │                                                                      
                                                 │                                                                      
                                                 │                                                                      
                                                 │                                                                      
                                                 │                                                                      
                                                 │                                                                      
                                                 │                                                                      
                                                 │                                                                      
                                                 │                                                                      
                                                 │                                                                      
                                                 │                                                                      
 Ctrl + g  p  t  n  h  s  o  q                                                  ...
