src/tests/e2e/snapshots/zellij__tests__e2e__cases__send_command_through_the_cli.snap
---
source: src/tests/e2e/cases.rs
expression: last_snapshot
---
 Zellij (e2e-test)  Tab #1                                                                                                    Alt <[]>  VERTICAL 
┌ Pane #1 ────────────────────────────────────────────────────────────────┐┌ /usr/src/zellij/fixtures/append-echo-script.sh ─────────────────────────┐
│$ /usr/src/zellij/zellij run -s -- "/usr/src/zellij/fixtures/append-echo-││foo                                                                      │
│script.sh"                                                               ││foo                                                                      │
│terminal_1                                                               ││█                                                                        │
│$                                                                        ││                                                                         │
│$                                                                        ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
│                                                                         ││                                                                         │
└─────────────────────────────────────────────────────────────────────────┘└ [ EXIT CODE: 0 ] <ENTER> re-run, <ESC> drop to shell, <Ctrl-c> exit ────┘
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT                                      ...
