src/tests/e2e/snapshots/zellij__tests__e2e__cases__start_without_pane_frames.snap
---
source: src/tests/e2e/cases.rs
assertion_line: 1194
expression: last_snapshot
---
 Zellij (e2e-test)  1 
$                                                          │$ █                                                         
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
                                                           │                                                            
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT 
 Tip: Alt + <n> => new pane. Alt + <←↓↑→> or Alt + <hjkl> => navigate. Alt + <+|-> => resize pane.                      
